# EnvBench

./: .gitignore  CITATION.bib  Makefile  README.md  envbench.py  generate_configs.py  pyproject.toml
.github/workflows/: docker.yaml
conf/: base-python-verl.yaml  base.yaml  baseline-repo2run.yaml  empty-repo2run.yaml  jvm-bash.yaml  jvm-installamatic.yaml  jvm-zeroshot.yaml  jvm.yaml  python-bash.yaml  python-installamatic.yaml  python-multi-attempt.yaml  python-obs10.yaml  python-obs5.yaml  python-readonly-v2.yaml  python-readonly.yaml  python-rebench-readonly.yaml  python-rebench-setup.yaml  python-shellcheck.yaml  python-try-again.yaml  python-zeroshot-repo2run-repo2run-prompt.yaml  python-zeroshot-repo2run.yaml  python-zeroshot.yaml
conf/benchmark/: repo2run.yaml
conf/llm/: gpt-4o.yaml  local.yaml  qwen3_enable_reasoning.yaml  qwen3_no_reasoning.yaml
data_collection/: Makefile  README.md  pyproject.toml
data_collection/scripts/: collect_gh_repos.py
dockerfiles/: jvm.Dockerfile  python.Dockerfile
env_setup_utils/: README.md  get_graph_image.py  process_trajectories_to_scripts.py  pyproject.toml  traj2html.py
env_setup_utils/analysis/: analysis_utils.py  analyze_results.py  cache_manager.py  scratchpad.ipynb  scripts_viewer.py  traj_viewer.py  utils.py  view_logs.py
env_setup_utils/data_sources/: __init__.py  hf.py  local.py
env_setup_utils/env_setup_utils/: process_trajectories_to_scripts.py  repo_downloader.py
env_setup_utils/markdown/: __init__.py  parse_md_headings.py
env_setup_utils/pass5_explorer/: app.py  initial_issues_counts.jsonl
env_setup_utils/pass5_explorer/templates/: index.html
env_setup_utils/scripts/: full_pipeline.py  full_pipeline.sh  python.Dockerfile
env_setup_utils/scripts/conf/: defaults.yaml  jvm.yaml  python.yaml
env_setup_utils/scripts/conf/llm/: gpt-4o-mini.yaml
evaluation/: .gitignore  Makefile  README.md  main.py  pyproject.toml
evaluation/conf/: config.yaml
evaluation/scripts/: repo2run.sh
graphs/: pyproject.toml
graphs/envbench_graphs/: __init__.py
graphs/envbench_graphs/multi_attempt/: graph.py  state_schema.py
graphs/envbench_graphs/readonly/: __init__.py  graph.py  prompts.py  state_schema.py
graphs/envbench_graphs/readonly_v2/: graph.py  prompts.py
graphs/envbench_graphs/rebench_readonly/: __init__.py  graph.py  prompts.py  state_schema.py
graphs/envbench_graphs/rebench_setup/: __init__.py  graph.py  prompts.py  state_schema.py
graphs/envbench_graphs/shellcheck/: __init__.py  graph.py  state_schema.py
graphs/envbench_graphs/try_again_paper/: __init__.py  graph.py  state_schema.py
graphs/multi_attempt/: __init__.py
graphs/readonly/: prompts.py  state_schema.py
graphs/shellcheck/: graph.py  state_schema.py
graphs/tests/: test_rebench_readonly.py  test_rebench_setup.py  test_try_again_paper.py
inference/: Makefile  README.md  main.py  pyproject.toml
inference/configs/: agent_config.py  context_provider_config.py  data_source_config.py  docker_config.py  run_inference_config.py  run_inference_jvm.yaml  run_inference_jvm_installamatic.yaml  run_inference_py.yaml  run_inference_py_baseline.yaml  run_inference_py_installamatic.yaml  toolkit_config.py
inference/src/: async_bash_executor.py  env_setup_runner.py
inference/src/agents/: base.py
inference/src/agents/bash_read_only/: agent.py  graph.py  prompts.py  state_schema.py
inference/src/agents/bash_read_only_v2/: agent.py  state_schema.py
inference/src/agents/installamatic/: agent.py  build_graph.py  prompts.py  search_graph.py  state_schema.py
inference/src/agents/jvm/: agent.py  prompts.py  state_schema.py
inference/src/agents/multi_attempt/: agent.py  graph.py  state_schema.py
inference/src/agents/procedural/: agent.py  commands.py  prompts.py
inference/src/agents/python/: agent.py  prompts.py  state_schema.py
inference/src/agents/shellcheck/: agent.py  graph.py  state_schema.py
inference/src/agents/try_again/: agent.py  state_schema.py
inference/src/agents/verl_agent/: agent.py  state_schema.py
inference/src/context_providers/: build_instructions.py
inference/src/toolkits/: __init__.py  base.py  bash_terminal_readonly.py  shellcheck.py
inference/src/utils/: messages_for_tool_calls.py  python_configuration.py
inference/tests/: test_async_bash_executor_py.py  test_modify_commands.py
