[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agents-env-setup-evaluation"
version = "0.2.0"
description = "Code associated with evaluation from Environment Setup project."
authors = [
    { name = "Alexander Kovrigin", email = "alexander.kovrigin@jetbrains.com" },
    { name = "Ilia Kholkin", email = "iluxa.kholkin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "hydra-core>=1.3.2",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "docker>=7.1.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.7",
    "gitpython>=3.1.43",
    "jsonlines>=4.0.0",
    "env-setup-utils",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.7",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "pyright>=1.1.381",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["*"]
ignore_missing_imports = true
