[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envbench-graphs"
version = "0.0.1"
description = "LangGraph implementations for environment setup workflows from EnvBench."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Alexandra Eliseeva", email = "alexandra.eliseeva@jetbrains.com" },
    { name = "Alexander Kovrigin", email = "alexander.kovrigin@jetbrains.com" }
]
dependencies = [
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["envbench_graphs"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = true

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["*"]
ignore_missing_imports = true 